kubernetes/loadbalancer_example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-lb
  annotations:
    load-balancer.hetzner.cloud/location: fsn1
    load-balancer.hetzner.cloud/name: lb-name
    load-balancer.hetzner.cloud/use-private-ip: "true"
spec:
  selector:
    # add here the label to match your app
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 9090
  type: LoadBalancer
